# dispatch-graphql

./: Cargo.toml  README.md  build.rs
examples/: sample.js  sample.rs
src/: GraphQLService.idl  lib.rs
