[package]
name = "dispatch-graphql"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
gqlmapi-rs = "0.14.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
windows-implement = "0.51.1"
windows-interface = "0.51.1"

[dependencies.windows]
version = "0.51.1"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
]
