[package]
name = "dispatch-graphql"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib" ]

[dependencies]
gqlmapi-rs = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
windows-implement = "0.51.1"
windows-interface = "0.51.1"

[dependencies.windows]
version = "0.51.1"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
webview2-com = "0.26.0"

[dev-dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
